fix android review comments